# Reptile-Central-Database

./: README.md  pyproject.toml  requirements.txt
backend/: __init__.py
backend/sql_files/DDL/: DDL.sql
backend/sql_files/DML/: create.sql  create_dml.ps1  delete.sql  read.sql  update.sql
backend/sql_files/DML/Submission/: DML.sql
frontend/: Home.py
frontend/pages/: 01_Orders.py  02_Customers.py  03_Animals.py  04_Employees.py  05_Employee_Assignments.py  06_Products.py  Animals.py  Customers.py  Employee_Assignments.py  Employees.py  Orders.py  Product_Types.py  Products.py
frontend/ui/: __init__.py  reset_button.py  ui_framework.py
tests/e2e/: README.md  conftest.py  test_full_site_playwright.py
